SalesforceProject2/src/objects/UnfollowRuleJob__c.object
<CustomObject>
    <description>EDIT AT YOUR OWN RISK: 

This custom object contains historical info on how many records were stripped of followers with each batch job.  

I recommend that no profiles be given access to edit the contents as it is only for reporting purposes.</description>
    <fields>
        <fullName>DelayRuleJob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unfollow scheduled previously?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumFollows__c</fullName>
        <label>Number of Follows Removed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumRecords__c</fullName>
        <label>Number of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumRules__c</fullName>
        <label>Number of Rules for this Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chatter Unfollow Rule Job Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>ObjectName__c</columns>
        <columns>NumFollows__c</columns>
        <columns>NumRecords__c</columns>
        <columns>NumRules__c</columns>
        <columns>DelayRuleJob__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Chatter Unfollow Rule Job Batch Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Unfollow Rule Jobs Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>